namespace Snake.Model
{
    public enum Direction
    {
        Up,
        Down,
        Left,
        Right
    }
}
